@@ -3,6 +3,7 @@
 * Prevent saving custom fields found in array of standard fields - ADDED
 * Optional Address line 2 field added, can be enabled under address field - ADDED
 * Classifieds dummy content - ADDED
+* "Kingstudio" theme compatibility for gd pages sidebar - ADDED
 
 = 2.0.0.59 =
 * GD Listings widget title not working with pagination - FIXED
